Fixed some *lots* of bugs